fix: [JAN-1090] scrollbar appearance

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -33,10 +33,10 @@ body {
   height: full;
 }
 .scroll::-webkit-scrollbar-thumb {
-  background-color: #d9d9d9;
+  background-color: #D1D5DB;
   border-radius: 10px;
 }
 .scroll::-webkit-scrollbar-track {
-  background-color: black;
+  background-color: #ffffff;
   border-radius: 10px;
 }
